--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <a href="../odin-recipes/recipes/lasagna.html">Lasagna</a>
+    <a href=""></a>
+    <a href=""></a>
+    <a href=""></a>
+    <a href=""></a>
 </body>
 </html>
