--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -9,9 +9,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="../odin-recipes/recipes/lasagna.html">Lasagna</a>
-    <a href="">Tuna Fish Salad</a>
-    <a href="">The Best Thai Coconut Soup</a>
-    <a href="">Baked Dijon Salmon</a>
-    <a href="">Creamy Bay Scallop Spaghetti</a>
+    <a href="../odin-recipes/recipes/tunafish.html">Tuna Fish Salad</a>
+    <a href="../odin-recipes/recipes/coconutsoup.html">The Best Thai Coconut Soup</a>
+    <a href="../odin-recipes/recipes/dijonsalmon.html">Baked Dijon Salmon</a>
+    <a href="../odin-recipes/recipes/scallopspag.html">Creamy Bay Scallop Spaghetti</a>
 </body>
 </html>
