Added a template to recipe section

--- a/odin-recipes/recipes/coconutsoup.html
+++ b/odin-recipes/recipes/coconutsoup.html
@@ -7,6 +7,24 @@
     <title>The Best Thai Coconut Soup</title>
 </head>
 <body>
-    
+    <img src=""/>
+    <p></p>
+
+    <h2>Ingredients</h2>
+    <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
+
+    <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ol>
 </body>
 </html>
