Changed the directory name from lasagna to salmon cakes also changed the links to it's name

--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="../odin-recipes/recipes/lasagna.html">Lasagna</a>
+    <a href="../odin-recipes/recipes/salmoncakes.html">Salmon Cakes</a>
     <a href="../odin-recipes/recipes/tunafish.html">Tuna Fish Salad</a>
     <a href="../odin-recipes/recipes/coconutsoup.html">The Best Thai Coconut Soup</a>
     <a href="../odin-recipes/recipes/dijonsalmon.html">Baked Dijon Salmon</a>
