--- a/odin-recipes/recipes/coconutsoup.html
+++ b/odin-recipes/recipes/coconutsoup.html
@@ -7,24 +7,32 @@
     <title>The Best Thai Coconut Soup</title>
 </head>
 <body>
-    <img src=""/>
-    <p></p>
+    <img src="../recipes-images/thaisoup.webp"/>
+    <p>This Thai coconut soup is full of authentic, bold, and delicious Thai flavors. This is the best Thai soup recipe out there — you won't be disappointed with this one! Serve over steamed rice.</p>
 
     <h2>Ingredients</h2>
     <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>1 tablespoon vegetable oil</li>
+        <li>2 tablespoons grated fresh ginger</li>
+        <li>2 teaspoons red curry paste</li>
+        <li>1 stalk lemon grass, minced</li>
+        <li>4 cups chicken broth</li>
+        <li>3 tablespoons fish sauce</li>
+        <li>1 tablespoon light brown sugar</li>
+        <li>3 (13.5 ounce) cans coconut milk</li>
+        <li>½ pound fresh shiitake mushrooms, sliced</li>
+        <li>1 pound medium shrimp - peeled and deveined</li>
+        <li>2 tablespoons fresh lime juice</li>
+        <li>salt to taste</li>
+        <li>¼ cup chopped fresh cilantro</li>
     </ul>
 
+    <h2>Steps</h2>
     <ol>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Heat oil in a large pot over medium heat. Add ginger, curry paste, and lemongrass; cook and stir in the hot oil for 1 minute.</li>
+        <li>Gradually stir in chicken broth, then stir in fish sauce and brown sugar; reduce heat to low and simmer for 15 minutes.</li>
+        <li>Add coconut milk and mushrooms; cook and stir until mushrooms are soft, about 5 minutes.</li>
+        <li>Add shrimp; cook until no longer translucent, about 5 minutes. Stir in lime juice; season with salt and garnish with cilantro.</li>
     </ol>
 </body>
 </html>
