--- a/odin-recipes/recipes/tunafish.html
+++ b/odin-recipes/recipes/tunafish.html
@@ -7,6 +7,26 @@
     <title>Tuna Fish Salad</title>
 </head>
 <body>
+    <img src="../recipes-images/tuna-fish-salad.webp"/>
+    <p>This tuna fish is excellent served on top of a green salad or between two pieces of bread with fresh lettuce. Sprinkle a little paprika on top to add a little flavor and color.</p>
+
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1 (5 ounce) can tuna, drained</li>
+        <li>½ cup mayonnaise</li>
+        <li>¼ cup chopped celery</li>
+        <li>¼ cup chopped onion</li>
+        <li>1 tablespoon chopped fresh parsley</li>
+        <li>½ teaspoon lemon juice</li>
+        <li>¼ teaspoon garlic powder</li>
+        <li>⅛ teaspoon salt</li>
+        <li>⅛ teaspoon ground black pepper</li>
+        <li>1 pinch paprika, or to taste</li>
+    </ul>
     
+    <h2>Steps</h2>
+    <ol>
+        <li>Combine tuna, mayonnaise, celery, onion, parsley, lemon juice, garlic powder, salt, and pepper in a large bowl; mix well. Season with paprika; refrigerate until chilled.</li>
+    </ol>
 </body>
 </html>
