--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -8,10 +8,12 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="../odin-recipes/recipes/salmoncakes.html">Salmon Cakes</a>
-    <a href="../odin-recipes/recipes/tunafish.html">Tuna Fish Salad</a>
-    <a href="../odin-recipes/recipes/coconutsoup.html">The Best Thai Coconut Soup</a>
-    <a href="../odin-recipes/recipes/dijonsalmon.html">Baked Dijon Salmon</a>
-    <a href="../odin-recipes/recipes/scallopspag.html">Creamy Bay Scallop Spaghetti</a>
+    <ul>
+        <li><a href="../odin-recipes/recipes/salmoncakes.html">Salmon Cakes</a></li>
+        <li> <a href="../odin-recipes/recipes/tunafish.html">Tuna Fish Salad</a></li>
+        <li><a href="../odin-recipes/recipes/coconutsoup.html">The Best Thai Coconut Soup</a></li>
+        <li><a href="../odin-recipes/recipes/dijonsalmon.html">Baked Dijon Salmon</a></li>
+        <li><a href="../odin-recipes/recipes/scallopspag.html">Creamy Bay Scallop Spaghetti</a></li>
+    </ul> 
 </body>
 </html>
