Added redirected to homepage links for recipe pages

--- a/odin-recipes/recipes/coconutsoup.html
+++ b/odin-recipes/recipes/coconutsoup.html
@@ -34,5 +34,7 @@
         <li>Add coconut milk and mushrooms; cook and stir until mushrooms are soft, about 5 minutes.</li>
         <li>Add shrimp; cook until no longer translucent, about 5 minutes. Stir in lime juice; season with salt and garnish with cilantro.</li>
     </ol>
+
+    <a href="../index.html">Back to Homepage</a>
 </body>
 </html>
