--- a/odin-recipes/recipes/dijonsalmon.html
+++ b/odin-recipes/recipes/dijonsalmon.html
@@ -32,5 +32,7 @@
        <li>Sprinkle the tops of fillets with bread crumb mixture.</li>
        <li>Bake salmon in the preheated oven until it flakes easily with a fork, 12 to 15 minutes. Season with salt and pepper, and garnish with a wedge of lemon.</li>
     </ol>
+
+    <a href="../index.html">Back to Homepage</a>
 </body>
 </html>
