--- a/odin-recipes/recipes/salmoncakes.html
+++ b/odin-recipes/recipes/salmoncakes.html
@@ -36,5 +36,7 @@
         <li>Form salmon mixture into four 1-inch thick patties; sprinkle remaining panko bread crumbs over each patty.</li>
         <li>Heat olive oil in a skillet over medium-heat. Cook patties in hot oil until golden and cooked through, 3 to 4 minutes per side.</li>
     </ol>
+
+    <a href="../index.html">Back to Homepage</a>
 </body>
 </html>
