--- a/odin-recipes/recipes/scallopspag.html
+++ b/odin-recipes/recipes/scallopspag.html
@@ -37,5 +37,7 @@
         <li>Drain pasta. Transfer to skillet with scallops; bring to a simmer. Add 1/2 of the chopped parsley. Cook until pasta is heated through and tender, about 1 minute.</li>
         <li>Remove from heat. Garnish generously with grated cheese. Add the rest of the parsley. Serve in warm bowls.</li>
     </ol>
+
+    <a href="../index.html">Back to Homepage</a>
 </body>
 </html>
