--- a/odin-recipes/recipes/tunafish.html
+++ b/odin-recipes/recipes/tunafish.html
@@ -28,5 +28,7 @@
     <ol>
         <li>Combine tuna, mayonnaise, celery, onion, parsley, lemon juice, garlic powder, salt, and pepper in a large bowl; mix well. Season with paprika; refrigerate until chilled.</li>
     </ol>
+
+    <a href="../index.html">Back to Homepage</a>
 </body>
 </html>
