--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -7,6 +7,7 @@
     <title>Odin-Recipes</title>
 </head>
 <body>
+    <img src="../odin-recipes/recipes-images/recipesheader.jpg" width="500"/>
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="../odin-recipes/recipes/salmoncakes.html">Salmon Cakes</a></li>
